# ipo-reminder

./: .env.example  .gitignore  .pre-commit-config.yaml  EMAIL_SETUP_OPTIONS.md  INVESTMENT_ADVISOR_COMPLETE.md  PERSONAL_ADVISOR_GUIDE.md  README.md  SETUP_COMPLETE.md  check_email.py  demonstrate_system.py  init-db.sql  ipo_reminder.db  kite_integration.py  pyproject.toml  pytest.ini  quick_email_test.py  requirements-test.txt  requirements.txt  run_enterprise_direct.py  run_enterprise_workflow.sh  run_simple.py  setup.sh  setup_database.py  setup_email.sh  setup_email_config.sh  setup_email_provider.sh  setup_github_secrets.sh  setup_gmail.sh  setup_gmail_app_password.sh  setup_kite_credentials.sh  setup_secrets.sh  test_correct_endpoint.py  test_db_connection.py  test_email.py  test_email_direct.py  test_email_send.py  test_error_handlers.py  test_github_setup.sh  test_gmail_smtp.py  test_live_com_delivery.py  (+4 more)
.devcontainer/: README.md  devcontainer.json
.github/workflows/: ipo-reminder.yml  ipo_reminder.yml  tests.yml
ipo-reminder-bot/ipo_reminder/: emailer.py  main.py
ipo_reminder/: __main__.py  advisor.py  cache.py  compliance.py  config.py  database.py  deep_analyzer.py  emailer.py  enterprise_orchestrator.py  error_handlers.py  exceptions.py  investment_advisor.py  ipo_categorizer.py  ipo_reminder.db  ipo_reminder.py  logging_config.py  monitoring.py  official_apis.py  rate_limiting.py  reliable_classifier.py  utils.py
ipo_reminder/sources/: chittorgarh.py  fallback.py  moneycontrol.py  official.py  zerodha.py
scripts/: check_no_env.py  set_github_secrets.sh
tests/: __init__.py  conftest.py  test_cache.py  test_chittorgarh.py  test_database.py  test_database_manager.py  test_database_models.py  test_emailer.py  test_official_apis.py  test_orchestrator.py  test_rate_limiting.py
