[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipo-reminder"
version = "0.1.0"
description = "A service that sends daily IPO reminders with Apply/Avoid suggestions via email."
authors = [
    { name = "Dinesh Reddy", email = "reddy.dinesh@live.com" }
]
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.9.3",
    "python-dotenv>=0.19.0",
    "pytz>=2021.1",
    "msal>=1.33.0",
    "python-dateutil>=2.9.0.post0",
    "pandas>=2.2.2",
    "secure-smtplib>=0.1.1",
    "email-validator>=2.1.0",
    "exchangelib>=5.5.1"
]
requires-python = ">=3.8"
