[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipo-reminder"
version = "0.1.0"
description = "A service that sends daily IPO reminders with Apply/Avoid suggestions via email."
authors = [
    { name = "Dinesh Reddy", email = "reddy.dinesh@live.com" }
]
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.9.3",
    "python-dotenv>=0.19.0",
    "pytz>=2021.1",
    "msal>=1.33.0",
    "python-dateutil>=2.9.0.post0",
    "pandas>=2.2.2",
    "secure-smtplib>=0.1.1",
    "email-validator>=2.1.0",
    "exchangelib>=5.5.1"
]
requires-python = ">=3.8"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=ipo_reminder",
    "--cov-report=html",
    "--cov-report=term-missing"
]

[tool.coverage.run]
source = ["ipo_reminder"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
